--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -56,7 +56,7 @@
           href: active-directory-b2c-overview-custom.md
         - name: Gebruikerstoegang
           href: manage-user-access.md
-    - name: JavaScript en paginacontracten
+    - name: JavaScript en pagina-indelingen
       href: user-flow-javascript-overview.md
     - name: OAuth 2.0
       href: active-directory-b2c-reference-oauth-code.md
@@ -142,8 +142,8 @@
               href: active-directory-b2c-custom-setup-msa-idp.md
             - name: Twitter
               href: active-directory-b2c-custom-setup-twitter-idp.md
-        - name: Paginacontract
-          href: page-contract.md
+        - name: Pagina-indeling
+          href: page-layout.md
         - name: Wachtwoordcomplexiteit
           href: active-directory-b2c-reference-password-complexity-custom.md
         - name: Wachtwoord wijzigen
