--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -564,6 +564,8 @@
           href: solution-template-copy-files-multiple-containers.md
         - name: Nieuwe bestanden kopiëren op basis van LastModifiedDate
           href: solution-template-copy-new-files-lastmodifieddate.md
+        - name: Bestanden verplaatsen
+          href: solution-template-move-files.md
         - name: Bulksgewijs kopiëren met behulp van een tabel met besturingselementen
           href: solution-template-bulk-copy-with-control-table.md
         - name: Een deltakopie maken met behulp van een tabel met besturingselementen
@@ -574,6 +576,8 @@
       items:
         - name: Problemen met activiteiten oplossen
           href: data-factory-troubleshoot-guide.md
+        - name: Problemen met Azure-SSIS IR-beheer oplossen
+          href: ssis-integration-runtime-management-troubleshoot.md
         - name: Problemen met het uitvoeren van pakketten in Azure-SSIS IR oplossen
           href: ssis-integration-runtime-ssis-activity-faq.md
 - name: Naslaginformatie
