commit translated contents

--- a/articles/data-share/index.yml
+++ b/articles/data-share/index.yml
@@ -49,3 +49,13 @@ sections:
         items:
           - html: <a href="share-your-data">Uw gegevens delen met Azure Data Share</a>
           - html: <a href="subscribe-to-data-share">Gegevens accepteren en ontvangen met Azure Data Share</a>
+  - title: Naslaginformatie
+    items:
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Talen
+            html: <p><a href="/dotnet/api/microsoft.azure.management.datashare">.NET</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/datashare">REST API</a></p>
