commit translated contents

--- a/articles/active-directory/conditional-access/TOC.yml
+++ b/articles/active-directory/conditional-access/TOC.yml
@@ -68,6 +68,10 @@
       href: howto-conditional-access-session-lifetime.md
     - name: Klassieke beleidsregels migreren
       href: policy-migration.md
+    - name: Problemen oplossen
+      items:
+        - name: Problemen met het hulpprogramma What If oplossen
+          href: troubleshoot-conditional-access-what-if.md
 - name: Naslaginformatie
   items:
     - name: Technische naslaginformatie
