--- a/articles/data-share/TOC.yml
+++ b/articles/data-share/TOC.yml
@@ -25,10 +25,24 @@
       href: how-to-configure-mapping.md
     - name: Problemen oplossen
       href: data-share-troubleshoot.md
+    - name: Gegevenssets toevoegen
+      href: how-to-add-datasets.md
+    - name: Ontvangers toevoegen
+      href: how-to-add-recipients.md
+    - name: Een uitnodiging verwijderen
+      href: how-to-delete-invitation.md
+    - name: Een share-abonnement intrekken
+      href: how-to-revoke-share-subscription.md
+- name: Naslaginformatie
+  items:
+    - name: .NET
+      href: /dotnet/api/microsoft.azure.management.datashare
+    - name: REST-API
+      href: /rest/api/datashare
 - name: Resources
   items:
     - name: Blog
-      href: 'https://azure.microsoft.com/blog/tag/data-share'
+      href: 'https://azure.microsoft.com/blog/announcing-preview-of-azure-data-share/'
     - name: Microsoft Tech Community
       href: 'https://techcommunity.microsoft.com/'
     - name: Productfeedback
