--- a/articles/sql-data-warehouse/TOC.yml
+++ b/articles/sql-data-warehouse/TOC.yml
@@ -303,6 +303,8 @@
           href: sql-data-warehouse-troubleshoot-connectivity.md
 - name: Naslaginformatie
   items:
+    - name: Sorteringstypen van de database
+      href: sql-data-warehouse-reference-collation-types.md
     - name: T-SQL
       items:
         - name: Volledige naslaginformatie
