--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -292,6 +292,14 @@
               href: ../common/storage-account-manage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Een opslagaccount upgraden
               href: ../common/storage-account-upgrade.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: Containers maken en beheren
+          items:
+            - name: Een container maken of verwijderen (.NET)
+              href: storage-blob-container-create.md
+            - name: Containers weergeven (.NET)
+              href: storage-blob-containers-list.md
+            - name: Eigenschappen en metagegevens beheren (.NET)
+              href: storage-blob-container-properties-metadata.md
         - name: Blobgegevens beveiligen
           items:
             - name: Toegang tot blobgegevens autoriseren
@@ -358,8 +366,6 @@
               href: ../common/storage-use-azurite.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: De Azure Storage-emulator gebruiken
               href: ../common/storage-use-emulator.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Eigenschappen en metagegevens instellen en ophalen
-          href: storage-properties-metadata.md
         - name: Een statische website hosten
           href: storage-blob-static-website-how-to.md
         - name: Azure CDN toewijzen aan een aangepast domein voor toegang via HTTPS
