--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -94,10 +94,12 @@
           href: stream-analytics-clean-up-your-job.md
         - name: Taken koppelen voor betrouwbaarheid
           href: stream-analytics-job-reliability.md
-        - name: Verifiëren met beheerde identiteit
+        - name: Verifiëren met beheerde identiteit - ADLS Gen 1-uitvoer
           href: stream-analytics-managed-identities-adls.md
         - name: SQL-referentiegegevens gebruiken
           href: sql-reference-data.md
+        - name: Verifiëren met beheerde identiteit - Blobuitvoer
+          href: blob-output-managed-identity.md
     - name: Oplossingen bouwen
       items:
         - name: Twitter-sentimentanalyse
