--- a/articles/virtual-machines/workloads/sap/toc.yml
+++ b/articles/virtual-machines/workloads/sap/toc.yml
@@ -208,6 +208,8 @@
               href: sap-ascs-ha-multi-sid-wsfc-file-share.md
     - name: Herstel na noodgevallen van SAP met Azure Site Recovery
       href: '../../../site-recovery/site-recovery-workload.md#protect-sap'
+    - name: Azure-nabijheidplaatsingsgroepen voor optimale netwerklatentie met SAP-toepassingen
+      href: sap-proximity-placement-scenarios.md
 - name: AAD SAP Identity Integration en eenmalige aanmelding
   items:
     - name: Integratie met SAP Cloud
