--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -59,7 +59,7 @@
       href: virtual-network-ip-addresses-overview-arm.md
     - name: Voorvoegsel voor het openbare IP-adres
       href: public-ip-address-prefix.md
-    - name: IPv6 voor Azure-VNET
+    - name: IPv6 voor Azure-VNet
       href: ipv6-overview.md
     - name: DDoS-bescherming
       href: ddos-protection-overview.md
@@ -91,7 +91,7 @@
           href: virtual-network-tcpip-performance-tuning.md
     - name: Implementeren
       items:
-        - name: IPv6 voor Azure-VNET
+        - name: IPv6 voor VNet - Basic Load Balancer
           items:
             - name: Azure PowerShell
               href: virtual-network-ipv4-ipv6-dual-stack-powershell.md
@@ -99,6 +99,14 @@
               href: virtual-network-ipv4-ipv6-dual-stack-cli.md
             - name: Resource Manager-sjabloon
               href: ipv6-configure-template-json.md
+        - name: IPv6 voor VNet - Standard Load Balancer
+          items:
+            - name: Azure PowerShell
+              href: virtual-network-ipv4-ipv6-dual-stack-standard-load-balancer-powershell.md
+            - name: Azure-CLI
+              href: virtual-network-ipv4-ipv6-dual-stack-standard-load-balancer-cli.md
+            - name: Resource Manager-sjabloon
+              href: ipv6-configure-standard-load-balancer-template-json.md
         - name: Netwerkbeveiligingsgroepen
           items:
             - name: Azure PowerShell
