--- a/articles/billing/TOC.yml
+++ b/articles/billing/TOC.yml
@@ -67,6 +67,8 @@
               href: ../sql-database/sql-database-reserved-capacity.md?toc=/azure/billing/TOC.json
             - name: Azure Databricks
               href: billing-prepay-databricks-reserved-capacity.md
+            - name: App Service
+              href: billing-prepay-app-service-isolated-stamp.md
             - name: Azure-softwareabonnementen
               href: ../virtual-machines/linux/prepay-suse-software-charges.md?toc=/azure/billing/TOC.json
         - name: Korting toepassen
@@ -81,6 +83,8 @@
               href: billing-how-reservation-discount-is-applied-to-azure-sql-dw.md
             - name: Azure Databricks
               href: billing-reservation-discount-databricks.md
+            - name: App Service
+              href: billing-reservation-discount-app-service-isolated-stamp.md
             - name: Azure-softwareabonnementen
               href: billing-understand-suse-reservation-charges.md
         - name: Softwarekosten niet inbegrepen
