--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -569,6 +569,8 @@
           href: ../blobs/data-lake-storage-tutorial-extract-transform-load-hive.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Concepten
       items:
+        - name: Toegang met meerdere protocollen
+          href: ../blobs/data-lake-storage-multi-protocol-access.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Stuurprogramma van het Azure Blob-bestandssysteem voor Hadoop
           href: ../blobs/data-lake-storage-abfs-driver.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: URI van het Azure Blob-bestandssysteem
@@ -577,12 +579,24 @@
           href: ../blobs/data-lake-storage-namespace.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Aanbevolen procedures
           href: data-lake-storage-best-practices.md
+        - name: Toegangslagen
+          items:
+            - name: Toegangslagen
+              href: storage-blob-storage-tiers.md
+            - name: De levenscyclus van Azure Blob Storage beheren
+              href: storage-lifecycle-management-concepts.md
         - name: Beveiliging
           items:
             - name: Overzicht van opslagbeveiliging
               href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Toegangsbeheer
               href: data-lake-storage-access-control.md
+        - name: Logboekregistratie
+          items:
+            - name: Opslaganalyse
+              href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Logboeken voor opslaganalyse
+              href: ../common/storage-analytics-logging.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Gebeurtenisverwerking
           href: storage-blob-event-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Procedures
