--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -237,7 +237,7 @@
         - name: Containers configureren
           href: speech-container-configuration.md
           displayName: 'docker, container, billing, apikey, pull, logging, on-premises'
-        - name: On-premises gebruiken
+        - name: Gebruiken met Kubernetes en Helm
           displayName: 'kubectl, docker, helm, kubernetes, K8s, tiller, container, image, on-prem, on-premises'
           href: speech-container-howto-on-premises.md
         - name: Containerinstanties gebruiken
