--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -84,3 +84,5 @@
   items:
     - name: Ondersteuningsgroep in de technische community
       href: 'https://techcommunity.microsoft.com/t5/Windows-Virtual-Desktop/bd-p/WindowsVirtualDesktop'
+    - name: UserVoice-forum
+      href: 'https://windowsvirtualdesktop.uservoice.com/forums/921118-general'
