--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -152,6 +152,12 @@
               href: ./move-limitations/virtual-machines-move-limitations.md
             - name: Virtuele netwerken
               href: ./move-limitations/virtual-network-move-limitations.md
+    - name: Tags
+      items:
+        - name: Resources taggen
+          href: resource-group-using-tags.md
+        - name: Tag-ondersteuning
+          href: tag-support.md
     - name: Beheren
       items:
         - name: Resourcegroepen beheren
@@ -176,9 +182,6 @@
             - name: Azure PowerShell gebruiken
               displayName: 'open,delete,deploy,move,lock,tag'
               href: manage-resources-powershell.md
-        - name: Resources organiseren
-          displayName: tags
-          href: resource-group-using-tags.md
         - name: Resources vergrendelen
           href: resource-group-lock-resources.md
         - name: Verificatie-API om toegang te krijgen tot abonnementen
@@ -251,12 +254,8 @@
           href: resource-group-template-functions-resource.md
         - name: Tekenreeksfuncties
           href: resource-group-template-functions-string.md
-    - name: Resourcemogelijkheden
-      items:
-        - name: Modus voor volledige verwijdering
-          href: complete-mode-deletion.md
-        - name: Tag-ondersteuning
-          href: tag-support.md
+    - name: Modus voor volledige verwijdering
+      href: complete-mode-deletion.md
     - name: Resourceproviders per service
       href: azure-services-resource-providers.md
     - name: REST - Resource Manager
