commit translated contents

--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -53,7 +53,17 @@
               href: QuickStarts/python-thumb.md
             - name: Ruby
               href: QuickStarts/ruby-thumb.md
-        - name: Afgedrukte tekst extraheren
+        - name: Tekst extraheren (Read-API)
+          items:
+            - name: 'C#'
+              href: QuickStarts/CSharp-hand-text.md
+            - name: Java
+              href: QuickStarts/java-hand-text.md
+            - name: Javascript
+              href: QuickStarts/javascript-hand-text.md
+            - name: Python
+              href: QuickStarts/python-hand-text.md
+        - name: Afgedrukte tekst extraheren (OCR)
           items:
             - name: 'C#'
               href: QuickStarts/CSharp-print-text.md
@@ -73,16 +83,6 @@
               href: QuickStarts/python-print-text.md
             - name: Ruby
               href: QuickStarts/ruby-print-text.md
-        - name: Handgeschreven tekst extraheren
-          items:
-            - name: 'C#'
-              href: QuickStarts/CSharp-hand-text.md
-            - name: Java
-              href: QuickStarts/java-hand-text.md
-            - name: Javascript
-              href: QuickStarts/javascript-hand-text.md
-            - name: Python
-              href: QuickStarts/python-hand-text.md
         - name: Een domeinmodel gebruiken
           items:
             - name: PHP
