--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -104,29 +104,149 @@
               href: classroom-labs/how-to-set-virtual-machine-passwords.md
     - name: DevTest Labs
       items:
-        - name: Resourcegroep opgeven voor virtuele machines van het lab
-          href: resource-group-control.md
-        - name: Beleid instellen voor het lab
-          href: devtest-lab-get-started-with-lab-policies.md
-        - name: Geheimen opslaan in Azure Key Vault
-          href: devtest-lab-store-secrets-in-key-vault.md
-        - name: Uw app in Azure testen
-          href: test-app-azure.md
-        - name: Persoonlijke gegevens exporteren of verwijdeen
-          href: personal-data-delete-export.md
-        - name: Virtuele machines importeren uit een ander lab
-          href: import-virtual-machines-from-another-lab.md
-        - name: Een lab configureren voor gebruik van een Extern bureaublad-gateway
-          href: configure-lab-remote-desktop-gateway.md
-        - name: Een fabrieksinstallatiekopie maken
-          href: image-factory-create.md
+        - name: Een lab configureren
           items:
-            - name: Een fabrieksinstallatiekopie uitvoeren vanuit Azure DevOps
-              href: image-factory-set-up-devops-lab.md
-            - name: Aangepaste installatiekopieën opslaan en distribueren naar meerdere labs
-              href: image-factory-save-distribute-custom-images.md
-            - name: Een retentiebeleid instellen en opschoningsscripts uitvoeren
-              href: image-factory-set-retention-policy-cleanup.md
+            - name: Een lab maken
+              href: devtest-lab-create-lab.md
+            - name: Labs maken of wijzigen met behulp van Resource Manager-sjabloon
+              href: devtest-lab-use-arm-and-powershell-for-lab-resources.md
+            - name: Resourcegroep opgeven voor virtuele machines van het lab
+              href: resource-group-control.md
+            - name: Ondersteuningsinformatie toevoegen aan een lab
+              href: devtest-lab-internal-support-message.md
+            - name: Beleid en planningen instellen
+              href: devtest-lab-set-lab-policy.md
+            - name: Een lab configureren voor gebruik van een Extern bureaublad-gateway
+              href: configure-lab-remote-desktop-gateway.md
+            - name: Aankondiging plaatsen in een lab
+              href: devtest-lab-announcements.md
+            - name: Kostenbeheer configureren
+              href: devtest-lab-configure-cost-management.md
+            - name: Meldingen over automatisch afsluiten verzenden
+              href: devtest-lab-auto-shutdown.md
+            - name: Uw lab schalen
+              href: devtest-lab-scale-lab.md
+            - name: Bases van virtuele machines beheren
+              items:
+                - name: Azure Marketplace-installatiekopieën configureren
+                  href: devtest-lab-configure-marketplace-images.md
+                - name: Een gelicentieerde installatiekopie inschakelen
+                  href: devtest-lab-enable-licensed-images.md
+                - name: Een gedeelde installatiekopiegalerie configureren
+                  href: configure-shared-image-gallery.md
+            - name: Tags configureren
+              href: devtest-lab-add-tag.md
+            - name: Toegangsbeheer configureren
+              items:
+                - name: Eigenaars en gebruikers van een lab toevoegen
+                  href: devtest-lab-add-devtest-user.md
+                - name: Machtigingen aanpassen met behulp van aangepaste rollen
+                  href: devtest-lab-grant-user-permissions-to-specific-lab-policies.md
+                - name: Toevoegen van een labgebruiker automatiseren
+                  href: automate-add-lab-user.md
+            - name: Virtuele netwerken beheren
+              items:
+                - name: Virtuele netwerken configureren
+                  href: devtest-lab-configure-vnet.md
+                - name: Een IP-configuratie-optie selecteren
+                  href: devtest-lab-shared-ip.md
+            - name: Een lab of een virtuele machine in een lab verwijderen
+              href: devtest-lab-delete-lab-vm.md
+            - name: Persoonlijke gegevens exporteren of verwijdeen
+              href: personal-data-delete-export.md
+        - name: Virtuele machines gebruiken in een lab
+          items:
+            - name: Een VM maken - Azure-portal
+              href: devtest-lab-add-vm.md
+            - name: Een VM maken met Azure PowerShell
+              href: devtest-lab-vm-powershell.md
+            - name: VM's maken en beheren met Azure CLI
+              href: devtest-lab-vmcli.md
+            - name: Een virtuele machine maken op basis van een Resource Manager-sjabloon
+              href: devtest-lab-use-resource-manager-template.md
+            - name: Een VM starten of stoppen met PowerShell of CLI
+              href: use-command-line-start-stop-virtual-machines.md
+            - name: Een VM opnieuw opstarten
+              href: devtest-lab-restart-vm.md
+            - name: De grootte van een virtuele machine wijzigen
+              href: devtest-lab-resize-vm.md
+            - name: Een virtuele machine opnieuw implementeren
+              href: devtest-lab-redeploy-vm.md
+            - name: Claimbare virtuele machines maken en beheren
+              href: devtest-lab-add-claimable-vm.md
+            - name: Geheimen configureren
+              href: devtest-lab-store-secrets-in-key-vault.md
+            - name: Gegevensschijven koppelen en ontkoppelen
+              href: devtest-lab-attach-detach-data-disk.md
+            - name: Virtuele machines starten met Automation-runbooks
+              href: start-machines-use-automation-runbooks.md
+            - name: Virtuele machines importeren uit een ander lab
+              href: import-virtual-machines-from-another-lab.md
+        - name: Omgevingen gebruiken in een lab
+          items:
+            - name: Een omgeving maken
+              href: devtest-lab-create-environment-from-arm.md
+            - name: Services op basis van Platform-as-a-Service (PaaS) gebruiken
+              href: use-paas-services.md
+            - name: Openbare omgevingen
+              items:
+                - name: Openbare omgevingen configureren en gebruiken
+                  href: devtest-lab-configure-use-public-environments.md
+                - name: Omgeving met Service Fabric-cluster maken
+                  href: create-environment-service-fabric-cluster.md
+            - name: Een omgeving op het virtuele netwerk van uw lab aansluiten
+              href: connect-environment-lab-virtual-network.md
+            - name: Testomgevingen met geneste sjablonen configureren
+              href: deploy-nested-template-environments.md
+        - name: Herbruikbare sjablonen beheren
+          items:
+            - name: Aangepaste installatiekopieën versus formules
+              href: devtest-lab-comparing-vm-base-image-types.md
+            - name: Omgevingssjablonen beheren
+              items:
+                - name: Een Git-opslagplaats voor artefacten en sjablonen toevoegen
+                  href: devtest-lab-add-artifact-repo.md
+            - name: Aangepaste installatiekopieën beheren
+              items:
+                - name: Aangepaste installatiekopie maken vanaf een virtuele machine
+                  href: devtest-lab-create-custom-image-from-vm-using-portal.md
+                - name: Aangepaste installatiekopie van een VHD maken met Azure Portal
+                  href: devtest-lab-create-template.md
+                - name: Aangepaste installatiekopie van een VHD maken met PowerShell
+                  href: devtest-lab-create-custom-image-from-vhd-using-powershell.md
+                - name: VHD-bestand uploaden met AzCopy
+                  href: devtest-lab-upload-vhd-using-azcopy.md
+                - name: VHD-bestand uploaden met PowerShell
+                  href: devtest-lab-upload-vhd-using-powershell.md
+                - name: VHD-bestand uploaden met Opslagverkenner
+                  href: devtest-lab-upload-vhd-using-storage-explorer.md
+            - name: Formules beheren
+              href: devtest-lab-manage-formulas.md
+            - name: Een fabrieksinstallatiekopie maken
+              href: image-factory-create.md
+              items:
+                - name: Een fabrieksinstallatiekopie uitvoeren vanuit Azure DevOps
+                  href: image-factory-set-up-devops-lab.md
+                - name: Aangepaste installatiekopieën opslaan en distribueren naar meerdere labs
+                  href: image-factory-save-distribute-custom-images.md
+                - name: Een retentiebeleid instellen en opschoningsscripts uitvoeren
+                  href: image-factory-set-retention-policy-cleanup.md
+        - name: Artefacten beheren
+          items:
+            - name: Artefacten toevoegen aan een VM
+              href: add-artifact-vm.md
+            - name: Aangepast artefacten maken
+              href: devtest-lab-artifact-author.md
+            - name: Een opslagplaats voor artefacten toevoegen aan een lab
+              href: add-artifact-repository.md
+            - name: Verplichte artefacten opgeven
+              href: devtest-lab-mandatory-artifacts.md
+        - name: Integratie met CI/CD
+          items:
+            - name: Labs integreren in uw Azure DevOps CI/CD-pijplijn
+              href: devtest-lab-integrate-ci-cd-vsts.md
+            - name: Omgevingen integreren in uw Azure DevOps CI-/CD-pijplijn
+              href: integrate-environments-devops-pipeline.md
         - name: DevTest Labs in het bedrijf
           items:
             - name: DevTest Labs op enterprise-schaal
@@ -147,128 +267,8 @@
                   href: devtest-lab-guidance-governance-policy-compliance.md
                 - name: Migratie en integratie van toepassingen
                   href: devtest-lab-guidance-governance-application-migration-integration.md
-        - name: Virtuele machines gebruiken in een lab
-          items:
-            - name: Een lab maken
-              href: devtest-lab-create-lab.md
-            - name: Een lab of een virtuele machine in een lab verwijderen
-              href: devtest-lab-delete-lab-vm.md
-            - name: Virtuele machines maken
-              href: devtest-lab-add-vm.md
-            - name: Claimbare virtuele machines maken en beheren
-              href: devtest-lab-add-claimable-vm.md
-            - name: VM's maken en beheren met Azure CLI
-              href: devtest-lab-vmcli.md
-            - name: Een VM maken met Azure PowerShell
-              href: devtest-lab-vm-powershell.md
-            - name: Een virtuele machine maken op basis van een Resource Manager-sjabloon
-              href: devtest-lab-use-resource-manager-template.md
-            - name: Een VM opnieuw opstarten
-              href: devtest-lab-restart-vm.md
-            - name: De grootte van een virtuele machine wijzigen
-              href: devtest-lab-resize-vm.md
-            - name: Een virtuele machine opnieuw implementeren
-              href: devtest-lab-redeploy-vm.md
-            - name: Een virtuele machine importeren
-              href: devtest-lab-import-vm.md
-            - name: Een VM starten of stoppen met PowerShell of CLI
-              href: use-command-line-start-stop-virtual-machines.md
-            - name: Virtuele machines starten met Automation-runbooks
-              href: start-machines-use-automation-runbooks.md
-        - name: Omgevingen gebruiken in een lab
-          items:
-            - name: Een omgeving maken
-              href: devtest-lab-create-environment-from-arm.md
-            - name: Openbare omgevingen configureren en gebruiken
-              href: devtest-lab-configure-use-public-environments.md
-            - name: Omgeving met Service Fabric-cluster maken
-              href: create-environment-service-fabric-cluster.md
-            - name: Een omgeving op het virtuele netwerk van uw lab aansluiten
-              href: connect-environment-lab-virtual-network.md
-            - name: Omgevingen integreren in uw Azure DevOps CI-/CD-pijplijn
-              href: integrate-environments-devops-pipeline.md
-            - name: Services op basis van Platform-as-a-Service (PaaS) gebruiken
-              href: use-paas-services.md
-            - name: Geneste sjablonen implementeren
-              href: deploy-nested-template-environments.md
-        - name: Toegang tot labs beveiligen
-          items:
-            - name: Eigenaars en gebruikers van een lab toevoegen
-              href: devtest-lab-add-devtest-user.md
-            - name: Machtigingen aanpassen met behulp van aangepaste rollen
-              href: devtest-lab-grant-user-permissions-to-specific-lab-policies.md
-            - name: Toevoegen van een labgebruiker automatiseren
-              href: automate-add-lab-user.md
-        - name: Een lab configureren
-          items:
-            - name: Beleid en planningen instellen
-              href: devtest-lab-set-lab-policy.md
-            - name: Meldingen over automatisch afsluiten verzenden
-              href: devtest-lab-auto-shutdown.md
-            - name: Kostenbeheer configureren
-              href: devtest-lab-configure-cost-management.md
-            - name: Azure Marketplace-installatiekopieën configureren
-              href: devtest-lab-configure-marketplace-images.md
-            - name: Een gelicentieerde installatiekopie inschakelen
-              href: devtest-lab-enable-licensed-images.md
-            - name: Tags toevoegen aan een lab
-              href: devtest-lab-add-tag.md
-            - name: Aankondiging plaatsen in een lab
-              href: devtest-lab-announcements.md
-            - name: Ondersteuningsinformatie toevoegen aan een lab
-              href: devtest-lab-internal-support-message.md
-            - name: Een gedeelde galerie met installatiekopieën configureren in Azure DevTest Labs
-              href: configure-shared-image-gallery.md
-        - name: Een aangepaste installatiekopie of formule selecteren
-          href: devtest-lab-comparing-vm-base-image-types.md
-        - name: Aangepaste installatiekopieën beheren
-          items:
-            - name: Aangepaste installatiekopie maken vanaf een virtuele machine
-              href: devtest-lab-create-custom-image-from-vm-using-portal.md
-            - name: Aangepaste installatiekopie van een VHD maken met Azure Portal
-              href: devtest-lab-create-template.md
-            - name: Aangepaste installatiekopie van een VHD maken met PowerShell
-              href: devtest-lab-create-custom-image-from-vhd-using-powershell.md
-            - name: VHD-bestand uploaden met AzCopy
-              href: devtest-lab-upload-vhd-using-azcopy.md
-            - name: VHD-bestand uploaden met PowerShell
-              href: devtest-lab-upload-vhd-using-powershell.md
-            - name: VHD-bestand uploaden met Opslagverkenner
-              href: devtest-lab-upload-vhd-using-storage-explorer.md
-        - name: Herbruikbare sjablonen beheren
-          items:
-            - name: Een Git-opslagplaats voor artefacten en sjablonen toevoegen
-              href: devtest-lab-add-artifact-repo.md
-            - name: Formules beheren
-              href: devtest-lab-manage-formulas.md
-        - name: Artefacten beheren
-          items:
-            - name: Artefacten toevoegen aan een VM
-              href: add-artifact-vm.md
-            - name: Aangepast artefacten maken
-              href: devtest-lab-artifact-author.md
-            - name: Een opslagplaats voor artefacten toevoegen aan een lab
-              href: add-artifact-repository.md
-            - name: Verplichte artefacten opgeven
-              href: devtest-lab-mandatory-artifacts.md
-        - name: Virtuele netwerken beheren
-          items:
-            - name: Virtuele netwerken configureren
-              href: devtest-lab-configure-vnet.md
-            - name: Een IP-configuratie-optie selecteren
-              href: devtest-lab-shared-ip.md
-        - name: Gegevensschijven beheren
-          items:
-            - name: Gegevensschijven koppelen en ontkoppelen
-              href: devtest-lab-attach-detach-data-disk.md
-        - name: Uw lab schalen
-          href: devtest-lab-scale-lab.md
-        - name: Integratie met CI/CD
-          items:
-            - name: Labs integreren in uw Azure DevOps CI/CD-pijplijn
-              href: devtest-lab-integrate-ci-cd-vsts.md
-        - name: Labs maken of wijzigen met behulp van Resource Manager-sjabloon
-          href: devtest-lab-use-arm-and-powershell-for-lab-resources.md
+        - name: Uw app in Azure testen
+          href: test-app-azure.md
         - name: Problemen oplossen
           items:
             - name: Problemen oplossen waardoor het maken van virtuele machines en omgevingen mislukt
