--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -21,6 +21,8 @@
           displayName: 'assign key, assign resource, add key, add resource, test, deploy, endpoint, query, publish'
     - name: .NET SDK gebruiken
       items:
+        - name: Een app maken en beheren
+          href: sdk-csharp-quickstart-authoring-app.md
         - name: Eindpunt queryvoorspelling
           href: sdk-csharp-quickstart-query-prediction-endpoint.md
     - name: REST-API's gebruiken
