--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -93,12 +93,13 @@
           href: streaming-policy-concept.md
         - name: Foutcodes voor streaming-eindpunten
           href: streaming-endpoint-error-codes.md
-    - name: Dynamische versleuteling en sleutellevering
+    - name: Inhoudsbeveiliging
       items:
-        - name: Protocollen voor streaming en versleutelingstypen
-          displayName: 'dynamic, encryption, content protection, PlayReady, Widevine, FairPlay'
+        - name: Dynamische versleuteling en sleutellevering
+          displayName: 'content protection, streaming protocols, encryption types, content protection, PlayReady, Widevine, FairPlay'
           href: content-protection-overview.md
-        - name: Multi-DRM-systeem met toegangsbeheer
+        - name: Een multi-DRM-systeem ontwerpen
+          displayName: 'drm, access control'
           href: design-multi-drm-system-with-access-control.md
         - name: DRM-licenties
           items:
