commit translated contents

--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -408,7 +408,7 @@
         - name: Wijzigingen die fouten veroorzaken
           href: reference-breaking-changes.md
 - name: v1.0
-  expanded: true
+  expanded: false
   items:
     - name: Overzicht
       href: v1-overview.md
