--- a/articles/data-share/TOC.yml
+++ b/articles/data-share/TOC.yml
@@ -48,6 +48,6 @@
     - name: Productfeedback
       href: 'https://feedback.azure.com/forums/922759-azure-data-share-public-preview'
     - name: Prijzen
-      href: 'https://azure.microsoft.com/pricing'
+      href: 'https://azure.microsoft.com/pricing/details/data-share/'
     - name: Service-updates
       href: 'https://azure.microsoft.com/updates/?product=data-share'
